# DP_power_flow

./: .gitignore  CMakeLists.txt  README.md  log-conf.conf  main.cpp  todo.md
.build/: CMakeCache.txt  CpuBE.cbp  Makefile  cmake_install.cmake
.build/src/: Makefile  cmake_install.cmake
data/: 2Bus_LF.xml  2Bus_LF_new.xml  2Bus_noLF.ptf  2Bus_noLF.xml  2Bus_noLF1.xml  4Bus.ptf  4Bus.xml  4Bus_LF.xml  4Bus_LF_new.xml  4Bus_SingleConstants with LF pu.xml  4Bus_new.ptf  4Bus_new.xml  4Bus_noLF.xml
lib/misc_utils/: string_utils.hpp  utils.hpp
src/: Agent.hpp  AgentFactory.hpp  BooleanExpression.hpp  CMakeLists.txt  Constant.hpp  ConstantFactory.hpp  Constraint.hpp  ConstraintFactory.cpp  ConstraintFactory.hpp  InputParams.hpp  LineFlowConstraint.h  MulConstraint.hpp  PbalanceConstraint.h  Preferences.hpp  Problem.cpp  Problem.hpp  QbalanceConstraint.h  Solver.hpp  TableConstraint.hpp  Types.hpp  Variable.cpp  Variable.hpp  VariableFactory.cpp  VariableFactory.hpp  WSumConstraint.hpp  XmulCConstraint.hpp
src/BE/: BESolver.cpp  CpuAggregator.cpp  CpuBEAgent.cpp  CpuBEAgent.hpp  CpuTable.cpp  CpuTable.hpp
src/MiniBE/: CpuMiniBEAgent.cpp
src/Utils/: Permutation.hpp  xmlutils.h
tests/: CMakeLists.txt
tests/BE/: CMakeLists.txt  CpuTableAggregationTest.cpp  CpuTableTest.cpp
tests/Constraints/: CMakeLists.txt  WSumConstraintTest.cpp  XmulCConstraintTest.cpp
tests/core/: CMakeLists.txt  WSumConstraintTest.cpp
tests/data/: 3Bus.xml  Athanasiadis13.ptf  Athanasiadis13.xml  rep_0_x_10.ptf  test_aggr_1.xml
